# CosmicAnimator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: mermaid.md  scenario-reference.md
docs/diagrams/: architecture.mmd
src/cosmicanimator/: __init__.py
src/cosmicanimator/adapters/style/: __init__.py  arrows.py  shapes.py  style_helpers.py  text.py
src/cosmicanimator/adapters/transitions/: __init__.py  blackhole.py  camera.py  fade.py  highlighting.py  motion.py  reveal.py  stars.py  timing.py  transition_utils.py  visuals.py
src/cosmicanimator/application/: generator.py
src/cosmicanimator/application/actions/: __init__.py  action_utils.py  base.py  boxes.py  diagrams.py  effects.py  loop.py  narration_actions.py  title.py
src/cosmicanimator/application/narration/: __init__.py  contracts.py  orchestra.py  policy.py  scheduler.py  subtitle.py  tts.py
src/cosmicanimator/core/: background.py  constants.py  theme.py
src/cosmicanimator/interfaces/: cli.py  render.py
tests/: test_apply_transition_pipeline.py  test_diagram_layout_ids.py  test_e2e_scenario.py  test_negative_scenarios.py  test_style_helpers.py  test_timing.py
tests/adapters/transitions/: test_apply_transition_pipeline.py
tests/application/actions/: test_diagram_layout_ids.py  test_generator_integration.py  test_registry_smoke.py  test_registry_sweep.py
work/: generated_scene.py  scenario.json
